--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Ariums | Mini Nature</title>
+        <link rel="shortcut icon" href="images/favicon.ico">
     </head>
 
     <body>
